@@ -104,7 +104,7 @@ f \- show/hide faces, toggle display of faces
 n \- show/hide vertex numbers, toggle display of vertex number labels
 N \- show/hide face numbers, toggle display of face number labels
 m \- show/hide edge numbers, toggle display of edge number labels
-t \- show/hide transparency, toggle display of any transparency
+t \- rotate through display of face transparency: model, 50%, none
 y \- rotate through display of symmetry elements: axes; axes and
 .IP
 mirrors; axes, mirrors and rot\-reflection planes; none
