@@ -36,6 +36,7 @@ class disp_poly_gl : public virtual disp_poly
 {
    private:
       bool show_orientation;
+      int transparency_type;
 
    protected:
       void gl_verts(const scene &scen);
@@ -43,12 +44,15 @@ class disp_poly_gl : public virtual disp_poly
       void gl_faces(const scene &scen);
 
    public:
+      enum {trans_model=0, trans_50pc, trans_0pc};
       disp_poly_gl();
 
       geom_disp *clone() const { return new disp_poly_gl(*this); };
       void gl_geom(const scene &scen);
       void set_show_orientation(bool show=true) { show_orientation = show; }
       bool get_show_orientation() { return show_orientation; }
+      void set_transparency_type(int typ) { transparency_type = typ; }
+      int get_transparency_type() { return transparency_type; }
 };
 
 
